--- a/Task Manager/Views/Home/Index.cshtml
+++ b/Task Manager/Views/Home/Index.cshtml
@@ -1,11 +1,59 @@
-﻿<!DOCTYPE html>
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@model Task_Manager.ViewModels.HomeViewModel
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Work+Sans' rel='stylesheet' type='text/css'>
+    <script src="~/lib/bootstrap/js/bootstrap.js"></script>
+    <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <title>Chukkadig</title>
 </head>
 <body>
-   <h1>@ViewBag.test</h1>
+    <div class="container">
+        <div class="position-absolute top-50 start-50 translate-middle">
+            <div>
+                <form asp-action="CreateJob" method="post" role="form">
+                    <div class="row">
+                        <div class="mb-2 col-md-6">
+                            <label asp-for="JobInfo.Name" class="form-label"></label>
+                            <input asp-for="JobInfo.Name" class="form-control" />
+                            <span asp-validation-for="JobInfo.Name" class="text-danger"></span>
+                        </div>
+                        <div class="mb-2 col-md-6">
+                            <label asp-for="JobInfo.Duration" class="form-label"></label>
+                            <input asp-for="JobInfo.Duration" class="form-control" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="mb-3 col-12">
+                            <label asp-for="JobInfo.Details" class="form-label"></label>
+                            <textarea asp-for="JobInfo.Details" class="form-control"></textarea>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <input type="submit" class="btn btn-success" value="Submit" />
+                    </div>
+                </form>
+            </div>
+            <ul>
+                @if (Model.JobInteraction.JobInfos is not null && Model.JobInteraction.JobInfos.Count > 0)
+                {
+                    @foreach (var job in Model.JobInteraction.JobInfos)
+                    {
+                        <li>@job.Name - @job.Duration</li>
+                    }
+                }
+                else
+                {
+                    <li>example1 - 1 hour</li>
+                    <li>example2 - 2 hour</li>
+                    <li>example3 - 3 hour</li>
+                }
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
