--- a/Task Manager/Views/Home/Index.cshtml
+++ b/Task Manager/Views/Home/Index.cshtml
@@ -1,119 +1,90 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@model Task_Manager.ViewModels.HomeViewModel
+﻿@model Task_Manager.ViewModels.HomeViewModel
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://fonts.googleapis.com/css?family=Work+Sans' rel='stylesheet' type='text/css'>
-    <script src="~/lib/js/popper.min.js"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.js"></script>
-    @*<link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />*@
-    <link href="~/lib/css/bootstrap.css" rel="stylesheet" />
-    <title>Chukkadig</title>
-</head>
-<body>
-    <div class="container">
-        <div class="position-absolute top-50 start-50 translate-middle">
-            <div>
-                <form asp-action="CreateJob" method="post" role="form">
-                    <div class="row">
-                        <div class="mb-2 col-md-6">
-                            <label asp-for="JobInfo.Name" class="form-label"></label>
-                            <input asp-for="JobInfo.Name" class="form-control" />
-                            <span asp-validation-for="JobInfo.Name" class="text-danger"></span>
-                        </div>
-                        <div class="mb-2 col-md-6">
-                            <label asp-for="JobInfo.Duration" class="form-label"></label>
-                            <input asp-for="JobInfo.Duration" class="form-control" />
-                        </div>
+<div class="container">
+    <div class="position-absolute top-50 start-50 translate-middle">
+        <div>
+            <form asp-action="CreateJob" method="post" role="form">
+                <div class="row">
+                    <div class="mb-2 col-md-6">
+                        <label asp-for="JobInfo.Name" class="form-label"></label>
+                        <input asp-for="JobInfo.Name" class="form-control" />
+                        <span asp-validation-for="JobInfo.Name" class="text-danger"></span>
                     </div>
-                    <div class="row">
-                        <div class="mb-3 col-12">
-                            <label asp-for="JobInfo.Details" class="form-label"></label>
-                            <textarea asp-for="JobInfo.Details" class="form-control"></textarea>
-                        </div>
+                    <div class="mb-2 col-md-6">
+                        <label asp-for="JobInfo.Duration" class="form-label"></label>
+                        <input asp-for="JobInfo.Duration" class="form-control" />
                     </div>
-                    <div class="d-flex justify-content-center mb-3">
-                        <input type="submit" class="btn btn-success" value="Submit" />
+                </div>
+                <div class="row">
+                    <div class="mb-3 col-12">
+                        <label asp-for="JobInfo.Details" class="form-label"></label>
+                        <textarea asp-for="JobInfo.Details" class="form-control"> </textarea>
                     </div>
-                </form>
-            </div>
-            <div class="list-group">
-                @if (Model.JobInteraction.JobInfos is not null
-     && Model.JobInteraction.JobInfos.Count > 0)
+                </div>
+                <div class="d-flex justify-content-center mb-3">
+                    <input type="submit" class="btn btn-success" />
+                </div>
+            </form>
+        </div>
+        <div class="list-group">
+            @if (Model.JobInfos is not null
+&& Model.JobInfos.Count > 0)
+            {
+                for (int i = 0; i < Model.JobInfos.Count; i++)
                 {
-                    for (int i = 0; i < Model.JobInteraction.JobInfos.Count; i++)
-                    {
-                        var job = Model.JobInteraction.JobInfos[i];
-                        bool isActive = i == 0;
-                        <div class="container">
-                            <div class="row">
-                                <div type="button" class="list-group-item list-group-item-action @(isActive ? "active" : "")" aria-current="@(isActive ? "true" : "false")">
-                                    <div class="row">
-                                        <div class="col-md-11 col-sm-1">
-                                            <div class="form-check">
-                                                <input class="form-check-input"
-                                                       type="checkbox"
-                                                       value=""
-                                                       id="(@job.Id)Check">
-                                                <label class="form-check-label"
-                                                       for="(@job.Id)Check">
-                                                    <strong>@job.Name</strong>
-                                                </label>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-1 d-flex align-items-center justify-content-end p-0 m-0 pb-2">
-                                            <!-- Close button moved here -->
-                                            <div type="button" class="btn btn-link" aria-label="Close">⨉</div>
+                    var job = Model.JobInfos[i];
+                    bool isActive = i == 0;
+                    <div class="container">
+                        <div class="row">
+                            <div type="button" class="list-group-item list-group-item-action @(isActive ? "active" : "")" aria-current="@(isActive ? "true" : "false")">
+                                <div class="row">
+                                    <div class="col-md-11 col-sm-1">
+                                        <div class="form-check">
+                                            <input class="form-check-input"
+                                                   type="checkbox"
+                                                   value=""
+                                                   id="(@job.Id)Check">
+                                            <label class="form-check-label"
+                                                   for="(@job.Id)Check">
+                                                <strong>@job.Name</strong>
+                                            </label>
                                         </div>
                                     </div>
-                                    <div class="row">
-                                        <div class="col-md-9 col-sm-8">: @job.Details</div>
-                                        <div class="col-md-3 d-flex align-items-center justify-content-end">@(job.Duration > 0 ? $" ⏱ {job.Duration} Hour." : "")</div>
+                                    <div class="col-md-1 d-flex align-items-center justify-content-end p-0 m-0 pb-2">
+                                        <a class="btn btn-link"
+                                           aria-label="Close"
+                                           asp-controller="Home"
+                                           asp-action="DeleteJob"
+                                           asp-route-id="@job.Id">
+                                            ⨉
+                                        </a>
                                     </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-9 col-sm-8">: @job.Details</div>
+                                    <div class="col-md-3 d-flex align-items-center justify-content-end">@(job.Duration > 0 ? $" ⏱ {job.Duration} Hour." : "")</div>
                                 </div>
                             </div>
                         </div>
-                    }
+                    </div>
                 }
-                else
-                {
-                    <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
-                        example1
-                    </button>
-                    <button type="button" class="list-group-item list-group-item-action">example2 - 2 Hours.</button>
-                    <button type="button" class="list-group-item list-group-item-action">example3 - 3 Hours.</button>
-                }
-            </div>
-            <div class="d-flex align-items-center justify-content-end">
-                <input type="submit" class="btn btn-link" value="Clear all" />
-            </div>
-</body>
-</html>
+            }
+            else
+            {
+                <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
+                    example1
+                </button>
+                <button type="button" class="list-group-item list-group-item-action">example2 - 2 Hours.</button>
+                <button type="button" class="list-group-item list-group-item-action">example3 - 3 Hours.</button>
+            }
+        </div>
+        <div class="d-flex align-items-center justify-content-end">
+            <a class="btn btn-link"
+               asp-controller="Home"
+               asp-action="Clear">
+                Clear all
+            </a>
+        </div>
+    </div>
+</div>
 
-<script>
-    const bottons = document.querySelectorAll(".list-group-item-action");
-
-    bottons.forEach((button) => {
-        button.addEventListener("click", (event) => {
-            event.stopPropagation();
-            bottons.forEach((b) => {
-                b.classList.remove("active");
-            });
-
-            button.classList.add("active");
-        });
-    });
-
-    document.addEventListener("click", () => {
-        const activeBottons = document.querySelectorAll(".list-group-item-action.active");
-        if (activeBottons.length > 0) {
-            activeBottons.forEach((activeBotton) => {
-                activeBotton.classList.remove("active");
-            });
-        }
-    });
-
-</script>
