--- a/Task Manager/Views/Home/Edit.cshtml
+++ b/Task Manager/Views/Home/Edit.cshtml
@@ -1,8 +1,10 @@
 ﻿@model JobInfo
 
 <div class="container">
-    <div class="position-absolute top-50 start-50 translate-middle">
-        <div>
+    <div class="overlay"></div>
+    <div class="background"></div>
+    <div class="position-absolute top-0 start-50 translate-middle-x">
+        <div class="topform">
             <form asp-action="Edit" method="post" role="form">
                 <div class="row">
                     <div class="mb-2 col-md-6">
@@ -13,15 +15,17 @@
                     <div class="mb-2 col-md-6">
                         <label asp-for="Duration" class="form-label"></label>
                         <input asp-for="Duration" class="form-control" />
+                        <span asp-validation-for="Duration" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="mb-3 col-12">
                         <label asp-for="Details" class="form-label"></label>
-                        <textarea asp-for="Details" class="form-control"> </textarea>
+                        <textarea asp-for="Details" class="form-control"></textarea>
+                        <span asp-validation-for="Details" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="d-flex justify-content-center mb-3">
+                <div class="d-flex justify-content-center">
                     <input type="submit" class="btn btn-success" />
                 </div>
             </form>
