--- a/Task Manager/Views/Home/Index.cshtml
+++ b/Task Manager/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@model Task_Manager.ViewModels.HomeViewModel
 
 <div class="container">
-    <div class="position-absolute top-50 start-50 translate-middle">
-        <div>
+    <div class="overlay"></div>
+    <div class="background"></div>
+    <div class="position-absolute top-0 start-50 translate-middle-x">
+        <div class="topform">
             <form asp-action="CreateJob" method="post" role="form">
                 <div class="row">
                     <div class="mb-2 col-md-6">
@@ -13,15 +15,17 @@
                     <div class="mb-2 col-md-6">
                         <label asp-for="JobInfo.Duration" class="form-label"></label>
                         <input asp-for="JobInfo.Duration" class="form-control" />
+                        <span asp-validation-for="JobInfo.Duration" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="mb-3 col-12">
                         <label asp-for="JobInfo.Details" class="form-label"></label>
-                        <textarea asp-for="JobInfo.Details" class="form-control"> </textarea>
+                        <textarea asp-for="JobInfo.Details" class="form-control"></textarea>
+                        <span asp-validation-for="JobInfo.Details" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="d-flex justify-content-center mb-3">
+                <div class="d-flex justify-content-center">
                     <input type="submit" class="btn btn-success" />
                 </div>
             </form>
@@ -34,7 +38,7 @@
                 {
                     var job = Model.JobInfos[i];
                     bool isActive = i == 0;
-                    <div class="container">
+                    <div class="container-fluid">
                         <div class="row">
                             <div type="button" class="list-group-item list-group-item-action @(isActive ? "active" : "")" aria-current="@(isActive ? "true" : "false")">
                                 <div class="row">
@@ -51,12 +55,12 @@
                                         </div>
                                     </div>
                                     <div class="col-md-1 d-flex align-items-center justify-content-end p-0 m-0 pb-2">
-                                        <a class="btn btn-link px-1 pt-0"
+                                        <a class="btn btn-link px-1 pt-0 custom-button"
                                            aria-label="Close"
                                            asp-controller="Home"
                                            asp-action="Edit"
                                            asp-route-id="@job.Id">edit</a>
-                                        <a class="btn btn-link px-2 pt-0"
+                                        <a class="btn btn-link px-2 pt-0 custom-button"
                                            aria-label="Close"
                                            asp-controller="Home"
                                            asp-action="DeleteJob"
@@ -64,7 +68,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-9 col-sm-8">: @job.Details</div>
+                                    <div class="col-md-9 col-sm-8">@job.Details</div>
                                     <div class="col-md-3 d-flex align-items-center justify-content-end">@(job.Duration > 0 ? $" ⏱ {job.Duration} Hour." : "")</div>
                                 </div>
                             </div>
