--- a/Task Manager/Views/Shared/_Layout.cshtml
+++ b/Task Manager/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <script src="~/lib/bootstrap/js/bootstrap.js"></script>
     @*<link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />*@
     <link href="~/lib/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/lib/css/style.css" rel="stylesheet"/>
     <title>Chukkadig</title>
 </head>
 <body>
