--- a/Task Manager/Views/Shared/_Layout.cshtml
+++ b/Task Manager/Views/Shared/_Layout.cshtml
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Work+Sans' rel='stylesheet' type='text/css'>
-    <script src="~/lib/bootstrap/js/bootstrap.js"></script>
+    @*<script src="~/lib/bootstrap/js/bootstrap.js"></script>*@
     @*<link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />*@
-    <link href="~/lib/css/bootstrap.css" rel="stylesheet" />
+    @*<link href="~/lib/css/bootstrap.css" rel="stylesheet" />*@
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap-grid.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap-utilities.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap-reboot.min.css" rel="stylesheet"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"></script>
     <link href="~/lib/css/style.css" rel="stylesheet"/>
     <title>Chukkadig</title>
 </head>
