--- a/Task Manager/Views/Home/Index.cshtml
+++ b/Task Manager/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
                                                    id="(@job.Id)Check">
                                             <label class="form-check-label"
                                                    for="(@job.Id)Check">
-                                                <strong>@job.Name</strong>
+                                                <strong>📌 @job.Name</strong>
                                             </label>
                                         </div>
                                     </div>
@@ -67,9 +67,13 @@
                                            asp-route-id="@job.Id">⨉</a>
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-md-9 col-sm-8">@job.Details</div>
-                                    <div class="col-md-3 d-flex align-items-center justify-content-end">@(job.Duration > 0 ? $" ⏱ {job.Duration} Hour." : "")</div>
+                                <div class="row show-detail">
+                                    <div class="col-md-9 col-sm-8">
+                                    @(job.Details is null ? "" : $"{job.Details}")
+                                    </div>
+                                    <div class="col-md-0 d-flex align-items-center justify-content-end">
+                                    @(job.Duration > 0 ? $" ⏱ {job.Duration} Hour." : "")
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -94,4 +98,3 @@
         </div>
     </div>
 </div>
-
